[gd_scene load_steps=5 format=3 uid="uid://c8plq8vtrqoym"]

[ext_resource type="Script" path="res://Bow.gd" id="1_rcwwy"]
[ext_resource type="ArrayMesh" uid="uid://dn0y32fu5dnrn" path="res://assets/meshes/Weapons_obj/Bow.obj" id="2_20aod"]
[ext_resource type="Script" path="res://scripts/DynamicPolygon3D.gd" id="3_l0r53"]

[sub_resource type="Curve3D" id="Curve3D_e7s6y"]

[node name="Bow" type="Node3D"]
script = ExtResource("1_rcwwy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = ExtResource("2_20aod")

[node name="StringAnchorTop" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925614, 0.161552)

[node name="StringNockPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.162)

[node name="StringAnchorBottom" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.926, 0.162)

[node name="Path3D" type="Path3D" parent="."]
top_level = true
curve = SubResource("Curve3D_e7s6y")

[node name="DynamicPolygon3D" type="CSGPolygon3D" parent="Path3D"]
polygon = PackedVector2Array(0.05, 0, -0.025, 0.0433013, -0.025, -0.0433013)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
script = ExtResource("3_l0r53")
number_of_vertices = 3
radius = 0.05

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(2, -2, 5)
